--- a/templates/user.xml
+++ b/templates/user.xml
@@ -25,4 +25,9 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
+  <template name="log" value="    private static final Logger log = LoggerFactory.getLogger(FastDFSClient.class);&#10;" description="日志快捷" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
