--- a/templates/user.xml
+++ b/templates/user.xml
@@ -1,5 +1,5 @@
 <templateSet group="user">
-  <template name="/**" value="/**   &#10; * @Title: $enclosing_method$  &#10; * @Description: $todo$&#10; * @param: $param$    &#10; * @return: $return$ &#10; * @date: $date$ $time$    &#10; * @throws   &#10; */" shortcut="ENTER" description="method annotation" toReformat="false" toShortenFQNames="true">
+  <template name="/**" value="/**   &#10; * @Title: $enclosing_method$  &#10; * @Description: $todo$&#10; * @param: $param$    &#10; * @return: $return$ &#10; * @date: $date$ $time$    &#10; * @throws   &#10; */" shortcut="ENTER" description="method annotation" toReformat="false" toShortenFQNames="true" deactivated="true">
     <variable name="enclosing_method" expression="annotated(&quot;annotation qname&quot;)" defaultValue="" alwaysStopAt="true" />
     <variable name="todo" expression="methodName()" defaultValue="" alwaysStopAt="true" />
     <variable name="param" expression="methodParameters()" defaultValue="" alwaysStopAt="true" />
