IU-2020.1.2 <improve@luna Update user.xml

--- a/templates/user.xml
+++ b/templates/user.xml
@@ -25,7 +25,8 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="log" value="    private static final Logger log = LoggerFactory.getLogger(FastDFSClient.class);&#10;" description="日志快捷" toReformat="true" toShortenFQNames="true">
+  <template name="log" value="    private static final Logger log = LoggerFactory.getLogger($Class$.class);&#10;" description="日志快捷" toReformat="false" toShortenFQNames="true">
+    <variable name="Class" expression="fileNameWithoutExtension()" defaultValue="A" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
