IU-2020.1.2 <improve@luna Update user.xml

--- a/templates/user.xml
+++ b/templates/user.xml
@@ -31,7 +31,7 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="anno" value="/** */" description="javaDoc" toReformat="true" toShortenFQNames="true">
+  <template name="anno" value="/** */" description="javaDoc" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="OTHER" value="true" />
     </context>
