IU-2020.1.2 <improve@luna Update user.xml, debugger.xml	Create setterTemplates.xml

--- a/templates/user.xml
+++ b/templates/user.xml
@@ -47,4 +47,9 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
+  <template name="getset" value="#set($paramName = $helper.getParamName($field, $project))&#10;#if($field.modifierStatic)&#10;static ##&#10;#end&#10;$classname set$StringUtil.capitalizeWithJavaBeanConvention($StringUtil.sanitizeJavaIdentifier($helper.getPropertyName($field, $project)))($field.type $paramName) {&#10;  #if ($field.name == $paramName)&#10;    #if (!$field.modifierStatic)&#10;      this.##&#10;    #else&#10;      $classname.##&#10;    #end&#10;  #end&#10;  $field.name = $paramName;&#10;    return this;&#10;}" description="链式写法" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
