--- a/templates/user.xml
+++ b/templates/user.xml
@@ -52,7 +52,10 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="main" value="public static void main(String[] args) {&#10;        SpringApplication.run($Class$, args);&#10;    }" description="spring main" toReformat="false" toShortenFQNames="true">
+  <template name="main" value="public static void main(String[] args) {&#10;        SpringApplication.run($Class$.class, args);&#10;    }" description="spring main" toReformat="false" toShortenFQNames="true">
     <variable name="Class" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
   </template>
 </templateSet>
