IU-2020.2.3 <luna_mac@lunas-mac.local Update easy-code-setting.xml, user.xml

--- a/templates/user.xml
+++ b/templates/user.xml
@@ -58,4 +58,9 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
+  <template name="---" value="        log.info(&quot;-----------------------xxxx-----------------------&quot;);&#10;" description="分隔符" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="OTHER" value="true" />
+    </context>
+  </template>
 </templateSet>
