--- a/templates/user.xml
+++ b/templates/user.xml
@@ -63,4 +63,9 @@
       <option name="OTHER" value="true" />
     </context>
   </template>
+  <template name="nome" value="void method();" shortcut="TAB" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
