--- a/templates/user.xml
+++ b/templates/user.xml
@@ -10,17 +10,22 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="me" value="public void method(){&#10;    &#10;}" shortcut="ENTER" description="方法创建" toReformat="false" toShortenFQNames="true">
+  <template name="me" value="public $PRO$ $METHOD$(){&#10;    &#10;}" shortcut="ENTER" description="方法创建" toReformat="true" toShortenFQNames="true">
+    <variable name="PRO" expression="" defaultValue="void" alwaysStopAt="true" />
+    <variable name="METHOD" expression="" defaultValue="method" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="mest" value="public static void method(){&#10;    &#10;}" shortcut="ENTER" description="静态方法创建" toReformat="false" toShortenFQNames="true">
+  <template name="mest" value="public static $PRO$ $INDEX$(){&#10;    &#10;}" shortcut="ENTER" description="静态方法创建" toReformat="false" toShortenFQNames="true">
+    <variable name="PRO" expression="" defaultValue="void" alwaysStopAt="false" />
+    <variable name="INDEX" expression="" defaultValue="method" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="atest" value="@Test&#10;public void atest(){&#10;&#10;}" description="测试类" toReformat="true" toShortenFQNames="true">
+  <template name="atest" value="@Test&#10;public void $METHOD$(){&#10;&#10;}" description="测试类" toReformat="true" toShortenFQNames="true">
+    <variable name="METHOD" expression="" defaultValue="method" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
@@ -36,18 +41,14 @@
       <option name="OTHER" value="true" />
     </context>
   </template>
-  <template name="attr" value="    /**  */&#10;    private String $Name$;" description="类属性快速" toReformat="false" toShortenFQNames="true">
+  <template name="attr" value="    /**  */&#10;    private String $Name$;" description="类属性快速" toReformat="true" toShortenFQNames="true">
     <variable name="Name" expression="" defaultValue="name" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="map" value="Iterator&lt;Map.Entry&lt;String, String&gt;&gt; entries = map.entrySet().iterator();&#10;            while (entries.hasNext()) {&#10;                Map.Entry&lt;String, String&gt; entry = entries.next();&#10;            }" description="遍历map" toReformat="false" toShortenFQNames="true">
-    <context>
-      <option name="JAVA_CODE" value="true" />
-    </context>
-  </template>
-  <template name="getset" value="#set($paramName = $helper.getParamName($field, $project))&#10;#if($field.modifierStatic)&#10;static ##&#10;#end&#10;$classname set$StringUtil.capitalizeWithJavaBeanConvention($StringUtil.sanitizeJavaIdentifier($helper.getPropertyName($field, $project)))($field.type $paramName) {&#10;  #if ($field.name == $paramName)&#10;    #if (!$field.modifierStatic)&#10;      this.##&#10;    #else&#10;      $classname.##&#10;    #end&#10;  #end&#10;  $field.name = $paramName;&#10;    return this;&#10;}" description="链式写法" toReformat="false" toShortenFQNames="true">
+  <template name="map" value="Iterator&lt;Map.Entry&lt;String, String&gt;&gt; entries = $PRO$.entrySet().iterator();&#10;            while (entries.hasNext()) {&#10;                Map.Entry&lt;String, String&gt; entry = entries.next();&#10;            }" description="遍历map" toReformat="true" toShortenFQNames="true">
+    <variable name="PRO" expression="" defaultValue="map" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
@@ -63,7 +64,8 @@
       <option name="OTHER" value="true" />
     </context>
   </template>
-  <template name="nome" value="void method();" shortcut="TAB" description="" toReformat="true" toShortenFQNames="true">
+  <template name="nome" value="void $INDEX$();" shortcut="TAB" description="" toReformat="true" toShortenFQNames="true">
+    <variable name="INDEX" expression="" defaultValue="method" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
