--- a/templates/user.xml
+++ b/templates/user.xml
@@ -10,16 +10,12 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="me" value="public $PRO$ $METHOD$(){&#10;    &#10;}" shortcut="ENTER" description="方法创建" toReformat="true" toShortenFQNames="true">
-    <variable name="PRO" expression="" defaultValue="void" alwaysStopAt="true" />
-    <variable name="METHOD" expression="" defaultValue="method" alwaysStopAt="true" />
+  <template name="me" value="public void method(){&#10;    &#10;}" shortcut="ENTER" description="方法创建" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="mest" value="public static $PRO$ $INDEX$(){&#10;    &#10;}" shortcut="ENTER" description="静态方法创建" toReformat="false" toShortenFQNames="true">
-    <variable name="PRO" expression="" defaultValue="void" alwaysStopAt="false" />
-    <variable name="INDEX" expression="" defaultValue="method" alwaysStopAt="true" />
+  <template name="mest" value="public static void method(){&#10;    &#10;}" shortcut="ENTER" description="静态方法创建" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
