--- a/templates/user.xml
+++ b/templates/user.xml
@@ -20,8 +20,7 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="atest" value="@Test&#10;public void $METHOD$(){&#10;&#10;}" description="测试类" toReformat="true" toShortenFQNames="true">
-    <variable name="METHOD" expression="" defaultValue="method" alwaysStopAt="true" />
+  <template name="atest" value="@Test&#10;public void atest(){&#10;&#10;}" description="测试类" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
