--- a/templates/user.xml
+++ b/templates/user.xml
@@ -82,7 +82,7 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
-  <template name="cuvi" value="                now(),&#10;                now(),&#10;                0," description="createTime,updateTime,version insnet" toReformat="true" toShortenFQNames="true">
+  <template name="cuviv" value="                now(),&#10;                now(),&#10;                0," description="createTime,updateTime,version insnet value" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="OTHER" value="true" />
     </context>
@@ -92,7 +92,12 @@
       <option name="OTHER" value="true" />
     </context>
   </template>
-  <template name="cuvus" value="            &lt;if test=&quot;where.modifiedTime == null and set.modifiedTime != null&quot;&gt;&#10;                modified_time = now(),&#10;            &lt;/if&gt;&#10;            &lt;if test=&quot;where.version == null and set.version != null&quot;&gt;&#10;                version = #{set.version,jdbcType=OTHER} + 1,&#10;            &lt;/if&gt;" description="createTime,updateTime,version update set" toReformat="false" toShortenFQNames="true">
+  <template name="cuvis" value="            create_time,&#10;            modified_time,&#10;            version," description="createTime,updateTime,version insnet set" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="OTHER" value="true" />
+    </context>
+  </template>
+  <template name="cuvus" value="            modified_time = now(),&#10;            version = version + 1,&#10;        &lt;/set&gt;&#10;        where id = #{id,jdbcType=INTEGER} and version =  #{version,jdbcType=OTHER}," description="createTime,updateTime,version update set" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="OTHER" value="true" />
     </context>
