IU-2020.2.4 <luna@lunas-mac.local Update user.xml

--- a/templates/user.xml
+++ b/templates/user.xml
@@ -122,4 +122,9 @@
       <option name="OTHER" value="true" />
     </context>
   </template>
+  <template name="cuvd" value=" and id = #{id,jdbcType=INTEGER} and version = #{version,jdbcType=OTHER}" description="delete createTime,updateTime,version" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="OTHER" value="true" />
+    </context>
+  </template>
 </templateSet>
