--- a/templates/AndroidLog.xml
+++ b/templates/AndroidLog.xml
@@ -1,27 +1,31 @@
 <templateSet group="AndroidLog">
-  <template name="logd" value="log.debug(&quot;$METHOD_NAME$: $content$&quot;);" description="Log.d(TAG, String)" toReformat="true" toShortenFQNames="true">
+  <template name="logd" value="log.debug(&quot;$METHOD_NAME$::$PLACE_HOLDERS$&quot;, $ARGUMENTS$);" description="log.debug(&quot;$METHOD_NAME$::$PLACE_HOLDERS$&quot;, $ARGUMENTS$);" toReformat="true" toShortenFQNames="true">
     <variable name="METHOD_NAME" expression="methodName()" defaultValue="" alwaysStopAt="false" />
-    <variable name="content" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="PLACE_HOLDERS" expression="groovyScript(&quot;_1.collect { it + ' = [{}]'}.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
+    <variable name="ARGUMENTS" expression="groovyScript(&quot;_1.collect { it }.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
     <context />
   </template>
-  <template name="loge" value="log.error(&quot;$METHOD_NAME$: $content$&quot;, $exception$);" description="Log.e(TAG, String, Exception)" toReformat="true" toShortenFQNames="true">
+  <template name="loge" value="log.error(&quot;$METHOD_NAME$::$PLACE_HOLDERS$ e={}&quot;, $ARGUMENTS$, $exception$);&#10;" description="log.error(&quot;$METHOD_NAME$::$PLACE_HOLDERS$ e={}&quot;, $ARGUMENTS$, $exception$);" toReformat="true" toShortenFQNames="true">
     <variable name="METHOD_NAME" expression="methodName()" defaultValue="" alwaysStopAt="false" />
-    <variable name="content" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="PLACE_HOLDERS" expression="groovyScript(&quot;_1.collect { it + ' = [{}]'}.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
+    <variable name="ARGUMENTS" expression="groovyScript(&quot;_1.collect { it }.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
     <variable name="exception" expression="" defaultValue="e" alwaysStopAt="false" />
-    <context />
-  </template>
-  <template name="logi" value="log.info(&quot;$METHOD_NAME$: $content$&quot;);" description="Log.i(TAG, String)" toReformat="true" toShortenFQNames="true">
-    <variable name="METHOD_NAME" expression="methodName()" defaultValue="" alwaysStopAt="false" />
-    <variable name="content" expression="" defaultValue="" alwaysStopAt="true" />
     <context />
   </template>
   <template name="logm" value="log.info($content$);" description="Log method name and its arguments" toReformat="true" toShortenFQNames="true">
     <variable name="content" expression="groovyScript(&quot;def params = _2.collect {it + ' = [\&quot; + ' + it + ' + \&quot;]'}.join(', '); return '\&quot;' + _1 + '() called' + (params.empty  ? '' : ' with: ' + params) + '\&quot;'&quot;, methodName(), methodParameters())" defaultValue="" alwaysStopAt="false" />
     <context />
   </template>
-  <template name="logr" value="log.info(&quot;$METHOD_NAME$() returned: &quot; +  $result$);" description="Log result of this method" toReformat="true" toShortenFQNames="true">
+  <template name="logi" value="log.info(&quot;$METHOD_NAME$::$PLACE_HOLDERS$&quot;, $ARGUMENTS$);&#10;" description="log.debug(&quot;$METHOD_NAME$::$PLACE_HOLDERS$&quot;, $ARGUMENTS$);" toReformat="true" toShortenFQNames="true">
     <variable name="METHOD_NAME" expression="methodName()" defaultValue="" alwaysStopAt="false" />
-    <variable name="result" expression="variableOfType(methodReturnType())" defaultValue="" alwaysStopAt="true" />
+    <variable name="PLACE_HOLDERS" expression="groovyScript(&quot;_1.collect { it + ' = [{}]'}.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
+    <variable name="ARGUMENTS" expression="groovyScript(&quot;_1.collect { it }.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
+    <context />
+  </template>
+  <template name="logr" value="log.info(&quot;$METHOD_NAME$ () returned::$PLACE_HOLDERS$&quot;, $ARGUMENTS$);&#10;" description="log.error(&quot;$METHOD_NAME$::$PLACE_HOLDERS$ e={}&quot;, $ARGUMENTS$, $exception$);" toReformat="true" toShortenFQNames="true">
+    <variable name="METHOD_NAME" expression="methodName()" defaultValue="" alwaysStopAt="false" />
+    <variable name="PLACE_HOLDERS" expression="groovyScript(&quot;_1.collect { it + ' = [{}]'}.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
+    <variable name="ARGUMENTS" expression="groovyScript(&quot;_1.collect { it }.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
     <context />
   </template>
 </templateSet>
