--- a/templates/AndroidLog.xml
+++ b/templates/AndroidLog.xml
@@ -28,4 +28,12 @@
     <variable name="ARGUMENTS" expression="groovyScript(&quot;_1.collect { it }.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
     <context />
   </template>
+  <template name="logiw" value="log.warn(&quot;$METHOD_NAME$::$PLACE_HOLDERS$&quot;, $ARGUMENTS$);&#10;" description="log.debug(&quot;$METHOD_NAME$::$PLACE_HOLDERS$&quot;, $ARGUMENTS$);" toReformat="true" toShortenFQNames="true">
+    <variable name="METHOD_NAME" expression="methodName()" defaultValue="" alwaysStopAt="false" />
+    <variable name="PLACE_HOLDERS" expression="groovyScript(&quot;_1.collect { it + ' = {}'}.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
+    <variable name="ARGUMENTS" expression="groovyScript(&quot;_1.collect { it }.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
