--- a/templates/AndroidLog.xml
+++ b/templates/AndroidLog.xml
@@ -5,7 +5,7 @@
     <variable name="ARGUMENTS" expression="groovyScript(&quot;_1.collect { it }.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
     <context />
   </template>
-  <template name="loge" value="log.error(&quot;$METHOD_NAME$::$PLACE_HOLDERS$ e={}&quot;, $ARGUMENTS$, $exception$);&#10;" description="log.error(&quot;$METHOD_NAME$::$PLACE_HOLDERS$ e={}&quot;, $ARGUMENTS$, $exception$);" toReformat="true" toShortenFQNames="true">
+  <template name="loge" value="log.error(&quot;$METHOD_NAME$::$PLACE_HOLDERS$ &quot;, $ARGUMENTS$, $exception$);&#10;" description="log.error(&quot;$METHOD_NAME$::$PLACE_HOLDERS$ e={}&quot;, $ARGUMENTS$, $exception$);" toReformat="true" toShortenFQNames="true">
     <variable name="METHOD_NAME" expression="methodName()" defaultValue="" alwaysStopAt="false" />
     <variable name="PLACE_HOLDERS" expression="groovyScript(&quot;_1.collect { it + ' = {}'}.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
     <variable name="ARGUMENTS" expression="groovyScript(&quot;_1.collect { it }.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
@@ -28,7 +28,7 @@
     <variable name="ARGUMENTS" expression="groovyScript(&quot;_1.collect { it }.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
     <context />
   </template>
-  <template name="logiw" value="log.warn(&quot;$METHOD_NAME$::$PLACE_HOLDERS$&quot;, $ARGUMENTS$);&#10;" description="log.debug(&quot;$METHOD_NAME$::$PLACE_HOLDERS$&quot;, $ARGUMENTS$);" toReformat="true" toShortenFQNames="true">
+  <template name="logw" value="log.warn(&quot;$METHOD_NAME$::$PLACE_HOLDERS$&quot;, $ARGUMENTS$);&#10;" description="log.debug(&quot;$METHOD_NAME$::$PLACE_HOLDERS$&quot;, $ARGUMENTS$);" toReformat="true" toShortenFQNames="true">
     <variable name="METHOD_NAME" expression="methodName()" defaultValue="" alwaysStopAt="false" />
     <variable name="PLACE_HOLDERS" expression="groovyScript(&quot;_1.collect { it + ' = {}'}.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
     <variable name="ARGUMENTS" expression="groovyScript(&quot;_1.collect { it }.join(', ') &quot;, methodParameters())" defaultValue="" alwaysStopAt="false" />
